results/SVCOMP/conversational/log-store_load1-2024_03_15_19_57_58.txt
class store_load1 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
  public static boolean f() {
    if (true) {
      int a0 = 0;
      int a1 = 1;
      int a2 = 2;
      int a3 = 3;
      int a4 = 4;
      if(0 != a0) return false;
      if(1 != a1) return false;
      if(2 != a2) return false;
      if(3 != a3) return false;
      if(4 != a4) return false;
    }
    if (true) {
      long a0 = 0L;
      long a1 = 1L;
      long a2 = 2L;
      long a3 = 3L;
      long a4 = 4L;
      if(0L != a0) return false;
      if(1L != a1) return false;
      if(2L != a2) return false;
      if(3L != a3) return false;
      if(4L != a4) return false;
    }
    if (true) {
      double a0 = 0.0;
      double a1 = 1.0;
      double a2 = 2.0;
      double a3 = 3.0;
      double a4 = 4.0;
      if(0.0 != a0) return false;
      if(1.0 != a1) return false;
      if(2.0 != a2) return false;
      if(3.0 != a3) return false;
      if(4.0 != a4) return false;
    }
    if (true) {
      float a0 = 0.5f;
      float a1 = 1.0f;
      float a2 = 2.0f;
      float a3 = 3.0f;
      float a4 = 4.0f;
      if (0.5f != a0)
        return false;
      if (1.0f != a1)
        return false;
      if (2.0f != a2)
        return false;
      if (3.0f != a3)
        return false;
      if (4.0f != a4)
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/store_load1.java:2: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
                                                            ^
  symbol:   variable a
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
                                                            ^
  symbol:   variable b
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:4: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
                                                            ^
  symbol:   variable c
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
                                                            ^
  symbol:   variable d
  location: class store_load1
4 errors

class store_load1 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
  public static boolean f() {
    if (true) {
      int a0 = 0;
      int a1 = 1;
      int a2 = 2;
      int a3 = 3;
      int a4 = 4;
      if(0 != a0) return false;
      if(1 != a1) return false;
      if(2 != a2) return false;
      if(3 != a3) return false;
      if(4 != a4) return false;
    }
    if (true) {
      long b0 = 0L;
      long b1 = 1L;
      long b2 = 2L;
      long b3 = 3L;
      long b4 = 4L;
      if(0L != b0) return false;
      if(1L != b1) return false;
      if(2L != b2) return false;
      if(3L != b3) return false;
      if(4L != b4) return false;
    }
    if (true) {
      double c0 = 0.0;
      double c1 = 1.0;
      double c2 = 2.0;
      double c3 = 3.0;
      double c4 = 4.0;
      if(0.0 != c0) return false;
      if(1.0 != c1) return false;
      if(2.0 != c2) return false;
      if(3.0 != c3) return false;
      if(4.0 != c4) return false;
    }
    if (true) {
      float d0 = 0.5f;
      float d1 = 1.0f;
      float d2 = 2.0f;
      float d3 = 3.0f;
      float d4 = 4.0f;
      if (0.5f != d0)
        return false;
      if (1.0f != d1)
        return false;
      if (2.0f != d2)
        return false;
      if (3.0f != d3)
        return false;
      if (4.0f != d4)
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/store_load1.java:2: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
                                                            ^
  symbol:   variable a
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
                                                            ^
  symbol:   variable b
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:4: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
                                                            ^
  symbol:   variable c
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
                                                            ^
  symbol:   variable d
  location: class store_load1
4 errors

class store_load1 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
  public static boolean f() {
    if (true) {
      int a0 = 0;
      int a1 = 1;
      int a2 = 2;
      int a3 = 3;
      int a4 = 4;
      if(0 != a0) return false;
      if(1 != a1) return false;
      if(2 != a2) return false;
      if(3 != a3) return false;
      if(4 != a4) return false;
    }
    if (true) {
      long b0 = 0L;
      long b1 = 1L;
      long b2 = 2L;
      long b3 = 3L;
      long b4 = 4L;
      if(0L != b0) return false;
      if(1L != b1) return false;
      if(2L != b2) return false;
      if(3L != b3) return false;
      if(4L != b4) return false;
    }
    if (true) {
      double c0 = 0.0;
      double c1 = 1.0;
      double c2 = 2.0;
      double c3 = 3.0;
      double c4 = 4.0;
      if(0.0 != c0) return false;
      if(1.0 != c1) return false;
      if(2.0 != c2) return false;
      if(3.0 != c3) return false;
      if(4.0 != c4) return false;
    }
    if (true) {
      float d0 = 0.5f;
      float d1 = 1.0f;
      float d2 = 2.0f;
      float d3 = 3.0f;
      float d4 = 4.0f;
      if (0.5f != d0)
        return false;
      if (1.0f != d1)
        return false;
      if (2.0f != d2)
        return false;
      if (3.0f != d3)
        return false;
      if (4.0f != d4)
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/store_load1.java:2: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; a[i] == i);
                                                            ^
  symbol:   variable a
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; b[i] == i);
                                                            ^
  symbol:   variable b
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:4: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; c[i] == i);
                                                            ^
  symbol:   variable c
  location: class store_load1
/home/max/Documents/JMLGPT/tmp/store_load1.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; d[i] == i);
                                                            ^
  symbol:   variable d
  location: class store_load1
4 errors

class store_load1 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i <= 4; i == i);
  public static boolean f() {
    if (true) {
      int a0 = 0;
      int a1 = 1;
      int a2 = 2;
      int a3 = 3;
      int a4 = 4;
      if(0 != a0) return false;
      if(1 != a1) return false;
      if(2 != a2) return false;
      if(3 != a3) return false;
      if(4 != a4) return false;
    }
    if (true) {
      long b0 = 0L;
      long b1 = 1L;
      long b2 = 2L;
      long b3 = 3L;
      long b4 = 4L;
      if(0L != b0) return false;
      if(1L != b1) return false;
      if(2L != b2) return false;
      if(3L != b3) return false;
      if(4L != b4) return false;
    }
    if (true) {
      double c0 = 0.0;
      double c1 = 1.0;
      double c2 = 2.0;
      double c3 = 3.0;
      double c4 = 4.0;
      if(0.0 != c0) return false;
      if(1.0 != c1) return false;
      if(2.0 != c2) return false;
      if(3.0 != c3) return false;
      if(4.0 != c4) return false;
    }
    if (true) {
      float d0 = 0.5f;
      float d1 = 1.0f;
      float d2 = 2.0f;
      float d3 = 3.0f;
      float d4 = 4.0f;
      if (0.5f != d0)
        return false;
      if (1.0f != d1)
        return false;
      if (2.0f != d2)
        return false;
      if (3.0f != d3)
        return false;
      if (4.0f != d4)
        return false;
    }
    return true;
  }
}

